# physics_projects

./: .gitignore  README.md
advanced_course/debug/: randomize  randomize.cpp
advanced_course/hello/: hello
advanced_course/move/: NVector.hpp  trymove.cpp
advanced_course/move/vtune_move/: r000hs.vtune
advanced_course/operators/: operators.cpp
advanced_course/optional/: optional
advanced_course/smartPointers/: smartPointers
advanced_course/templates/: OrderedVector.hpp  playwithsort
code/: a.out  snippets.cpp
code/advanced_course/move/: callgrind.out.18380  callgrind.out.23668  trymove
code/advanced_course/operators/: operators
code/advanced_course/optional/: optional.cpp
code/algorithms/partition/: CMakeLists.txt  partition.cpp  vcpkg.json
esc24/cpp/: algo.cpp  algo_functions.cpp  c_alloc.cpp  containers.cpp  containers_assoc.cpp  containers_assoc_concepts.cpp  dir.cpp  linear_congruential.cpp  pascal.cpp
esc24/cuda/: add.cu  hello_world.cu
esc24/flop/: epsilon.cc  exp_expansion.cc  function_refactor.cc  sum_forward_and_backward.cc  summation.cc  time.cc
esc24/mpi/: heat-eqn-mpi.c  hello_world.cc  hosts  make.def  pi.cc  ping_pong.cc  reduce.cc  ring.h  ring_naive.c  transpose.c
esc24/openmp/: README.md  hello.c  learningC.c  make.def  makefile  mandel.c  mm_testbed.c  mm_tst_cases.c  mm_utils.c  pi_mc.c  random.c
esc24/portable_stencil/: stencil_cuda.cpp  stencil_hip.cpp  stencil_omp.cpp  stencil_sycl.cpp
esc24/pybind/: 01_particle.cpp  02_kernels.cpp  03_matrix.cpp  04_list_accumulate.cpp  05_array_operations.cpp  CMakeLists.txt  TestModule.cc
hpc/matrixMultiplication/: Makefile  matrixMultiplication.cc
hpc/sumReduction/: Makefile  sum.cc
physics/track_reco/: compile.C  hit.cxx  hit.h  main-template-generation.cxx  main-template-seeds-qual.cxx  main-template-seeds.cxx  main-template-start.cxx  main.cxx  recoTrack.cxx  recoTrack.h  trueTrack.cxx  trueTrack.h
projects/calcolatrice/: calcolatrice.cpp  test divisione.cpp  test.cpp
projects/complex/: complex class.cpp
projects/determinante/: test 3x3.cpp
projects/isqrt/: a.out  isqrt.cpp
projects/prodotto scalare/: a.out  vector class.cpp
projects/rational/: a.out  rational class.cpp
(+246 files in other folders)
